exports[`alder works with the  flag 1`] = `
"
 fixtures
 ├── README.md
 ├── bar
 │   ├── bar.js
 │   ├── baz.txt
 │   └── foo.js
 ├── baz
 │   └── baz.js
 ├── foo
 │   ├── README.md
 │   ├── bar.js
 │   └── foo.js
 ├── foobar.java
 ├── foobarbaz.txt
 ├── qux
 └── zulu.rs
4 directories, 11 files (3.59 kB)
"
`;

exports[`alder works with the --filelimit=3 flag 1`] = `
"
 fixtures
 ├── README.md
 ├── bar
 │   ├── bar.js
 │   ├── baz.txt
 │   └── foo.js
 ├── baz
 │   └── baz.js
 ├── foo
 │   ├── README.md
 │   ├── bar.js
 │   └── foo.js
 ├── foobar.java
 ├── foobarbaz.txt
 ├── qux
 └── zulu.rs
4 directories, 11 files (3.59 kB)
"
`;

exports[`alder works with the --jsx flag 1`] = `
"
 fixtures
<file size=\"0 B\" name=\"README.md\" />
<dir \"170 B\" name=\"bar\">
    <file size=\"0 B\" name=\"bar.js\" />
    <file size=\"0 B\" name=\"baz.txt\" />
    <file size=\"0 B\" name=\"foo.js\" />
</dir>
<dir \"102 B\" name=\"baz\">
    <file size=\"3.59 kB\" name=\"baz.js\" />
</dir>
<dir \"170 B\" name=\"foo\">
    <file size=\"0 B\" name=\"README.md\" />
    <file size=\"0 B\" name=\"bar.js\" />
    <file size=\"0 B\" name=\"foo.js\" />
</dir>
<file size=\"0 B\" name=\"foobar.java\" />
<file size=\"0 B\" name=\"foobarbaz.txt\" />
<dir size=\"68 B\" name=\"qux\" />
<file size=\"0 B\" name=\"zulu.rs\" />
4 directories, 11 files (3.59 kB)
"
`;

exports[`alder works with the --prune flag 1`] = `
"
 fixtures
 ├── README.md
 ├── bar
 │   ├── bar.js
 │   ├── baz.txt
 │   └── foo.js
 ├── baz
 │   └── baz.js
 ├── foo
 │   ├── README.md
 │   ├── bar.js
 │   └── foo.js
 ├── foobar.java
 ├── foobarbaz.txt
 └── zulu.rs
4 directories, 11 files (3.59 kB)
"
`;

exports[`alder works with the -D flag 1`] = `
"
 fixtures
 ├── [Jan 23 12:41]  README.md
 ├── [Jan 23 12:40]  bar
 │   ├── [Jan 23 10:26]  bar.js
 │   ├── [Jan 23 12:40]  baz.txt
 │   └── [Jan 23 12:40]  foo.js
 ├── [Jan 23 10:26]  baz
 │   └── [Jan 23 04:45]  baz.js
 ├── [Jan 23 12:41]  foo
 │   ├── [Jan 23 12:41]  README.md
 │   ├── [Jan 23 12:40]  bar.js
 │   └── [Jan 23 10:26]  foo.js
 ├── [Jan 23 12:43]  foobar.java
 ├── [Jan 23 12:42]  foobarbaz.txt
 ├── [Jan 24 09:15]  qux
 └── [Jan 23 12:44]  zulu.rs
4 directories, 11 files (3.59 kB)
"
`;

exports[`alder works with the -a flag 1`] = `
"
 fixtures
 ├── README.md
 ├── bar
 │   ├── bar.js
 │   ├── baz.txt
 │   └── foo.js
 ├── baz
 │   └── baz.js
 ├── foo
 │   ├── README.md
 │   ├── bar.js
 │   └── foo.js
 ├── foobar.java
 ├── foobarbaz.txt
 ├── qux
 └── zulu.rs
4 directories, 11 files (3.59 kB)
"
`;

exports[`alder works with the -d flag 1`] = `
"
 fixtures
 ├── bar
 ├── baz
 ├── foo
 ├── qux
4 directories, 11 files (3.59 kB)
"
`;

exports[`alder works with the -d flag 2`] = `
"
 fixtures
 ├── bar
 ├── baz
 ├── foo
 ├── qux
4 directories, 11 files (3.59 kB)
"
`;

exports[`alder works with the -e bar flag 1`] = `
"
 fixtures
 ├── README.md
 ├── baz
 │   └── baz.js
 ├── foo
 │   ├── README.md
 │   └── foo.js
 ├── qux
 └── zulu.rs
4 directories, 8 files (3.59 kB)
"
`;

exports[`alder works with the -f flag 1`] = `
"
 fixtures
 ├── fixtures/README.md
 ├── fixtures/bar
 │   ├── fixtures/bar/bar.js
 │   ├── fixtures/bar/baz.txt
 │   └── fixtures/bar/foo.js
 ├── fixtures/baz
 │   └── fixtures/baz/baz.js
 ├── fixtures/foo
 │   ├── fixtures/foo/README.md
 │   ├── fixtures/foo/bar.js
 │   └── fixtures/foo/foo.js
 ├── fixtures/foobar.java
 ├── fixtures/foobarbaz.txt
 ├── fixtures/qux
 └── fixtures/zulu.rs
4 directories, 11 files (3.59 kB)
"
`;

exports[`alder works with the -i flag 1`] = `
"
 fixtures
README.md
bar
bar.js
baz.txt
foo.js
baz
baz.js
foo
README.md
bar.js
foo.js
foobar.java
foobarbaz.txt
qux
zulu.rs
4 directories, 11 files (3.59 kB)
"
`;

exports[`alder works with the -p bar flag 1`] = `
"
 fixtures
 ├── bar
 │   ├── bar.js
 ├── foobar.java
 ├── foobarbaz.txt
4 directories, 7 files (0 B)
"
`;

exports[`alder works with the -s flag 1`] = `
"
 fixtures
 ├── README.md (0 B)
 ├── bar
 │   ├── bar.js (0 B)
 │   ├── baz.txt (0 B)
 │   └── foo.js (0 B)
 ├── baz
 │   └── baz.js (3.59 kB)
 ├── foo
 │   ├── README.md (0 B)
 │   ├── bar.js (0 B)
 │   └── foo.js (0 B)
 ├── foobar.java (0 B)
 ├── foobarbaz.txt (0 B)
 ├── qux
 └── zulu.rs (0 B)
4 directories, 11 files (3.59 kB)
"
`;
